# src/routes/userRoutes.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { register, login, followUser } from '../controllers/userController';
+import { register, login, followUser, getUserData } from '../controllers/userController';
 import { authenticate } from '../middlewares/authMiddleware';  // Ensure correct import path
 
 const router = express.Router();
@@ -10,5 +10,6 @@ router.post('/login', login);
 
 // Protected route
 router.patch('/follow/:followId', authenticate, followUser);
+router.get('/me/data', authenticate, getUserData);
 
 export default router;
